<resources>
    <string name="app_name">work 3.1.2q</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="null1"> </string>
    <string name="point_tosk">Точка уже введиина</string>
    <string name="с">С</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="equally">=</string>







</resources>
