<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/darker_gray"
        android:drawableTop="@android:color/black"
        android:drawableBottom="@android:color/black"
        android:textSize="50sp" />


    <LinearLayout
        android:id="@+id/zero_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/output"
        android:orientation="horizontal">

        <Button
            android:id="@+id/с"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/с"
            android:textSize="40sp" />

        <Button
            android:id="@+id/plus_minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus_minus"
            android:textSize="40sp" />

        <Button
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/percent"
            android:textSize="40sp" />

        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/division"
            android:textSize="40sp" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/one_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/zero_layout"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="40sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="40sp" />

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="40sp" />

        <Button
            android:id="@+id/multiplication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/multiplication"
            android:textSize="40sp" />



    </LinearLayout>
    <LinearLayout
        android:id="@+id/two_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_below="@id/one_layout"
        android:layout_weight="1">

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="40sp" />

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="40sp" />

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="40sp" />

        <Button
            android:id="@+id/subtraction"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/subtraction"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/three_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_below="@id/two_layout">

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="40sp" />

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="40sp" />
        <Button
            android:id="@+id/addition"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/addition"
            android:textSize="40sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/four_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_below="@id/three_layout">

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:text="@string/zero"
            android:textSize="40sp" />

        <Button
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/point"
            android:textSize="40sp" />

        <Button
            android:id="@+id/equally"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/equally"
            android:textSize="40sp" />

    </LinearLayout>

</RelativeLayout>